Added parcel to the tools.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "Tecky-Academy-2018-11-17",
   "version": "1.0.0",
   "description": "Examples for Tecky workshop on 2018-11-17",
-  "main": "index.js",
+  "main": "index.html",
+  "scripts": {
+    "start": "parcel index.html --open",
+    "build": "parcel build index.html"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "parcel-bundler": "^1.6.1"
+  },
   "repository": "git@github.com:teckyio/Tecky-Academy-2018-11-17.git",
   "author": "dev@tecky.io",
   "license": "None"
