--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "Examples for Tecky workshop on 2018-11-17",
   "main": "index.html",
-  "dependencies": {},
+  "dependencies": {
+    "http-server": "^0.11.1"
+  },
+  "scripts": {
+    "start": "http-server ./"
+  },
   "repository": "git@github.com:teckyio/Tecky-Academy-2018-11-17.git",
   "author": "dev@tecky.io",
   "license": "None"
